# moltaqa

./: .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  QuranReader.pro  README  alkotobiya.pro  build-deb.sh  build-win.bat  elkotobiya.pro  installer.iss  moltaqa-lib.pro  version-bump.sh
data/: qt_rc.qrc
data/styles/default/: default.css
debian/: changelog  control  copyright  rules
doc/: doxonfig
res/css/: defaut.css  tests.html
resources/: QResource.qrc  QuranReader.rc  elkotobiya.rc  qt_rc.qrc
resources/css/: defaut.css
share/alkotobiya/: qt_rc.qrc
share/alkotobiya/js/: scripts.js
share/alkotobiya/locale/: qt_ar.qm
share/alkotobiya/styles/default/: default.css
share/applications/: moltaqa-lib.desktop
share/moltaqa-lib/: qt_rc.qrc  win_rc.rc
share/moltaqa-lib/data/: quran-meta.db
share/moltaqa-lib/data/help/: help.mlb
share/moltaqa-lib/data/welcome/: welcome.css  welcome.html
share/moltaqa-lib/js/: editor.js  jquery.pagination.js  jquery.tooltip.js  reader.js  scripts.js  search.js
share/moltaqa-lib/js/ckeditor/: config.js
share/moltaqa-lib/js/ckeditor/lang/: ar.js
share/moltaqa-lib/js/ckeditor/plugins/abbr/: plugin.js
share/moltaqa-lib/js/ckeditor/plugins/bookLink/: plugin.js
share/moltaqa-lib/js/ckeditor/plugins/bookMeta/: plugin.js
share/moltaqa-lib/js/ckeditor/plugins/simpleLink/: plugin.js
share/moltaqa-lib/js/ckeditor/skins/kama/: editor.css
share/moltaqa-lib/locale/: qt_ar.ts
share/moltaqa-lib/styles/black/: config.cfg  default.css
share/moltaqa-lib/styles/default/: config.cfg  default.css
share/moltaqa-lib/styles/light/: config.cfg  default.css
share/moltaqa-lib/template/html_export/: default.css
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  abstarctview.cpp  abstarctview.h  abstractbookreader.cpp  abstractbookreader.h  abstractdbhandler.cpp  abstractdbhandler.h  abstracteditwidget.cpp  abstracteditwidget.h  abstractqurantext.cpp  abstractqurantext.h  addbookreferdialog.ui  arabicanalyzer.cpp  arabicfilter.cpp  arabicfilter.h  arabictokenizer.cpp  arabictokenizer.h  authorinfo.cpp  authorinfo.h  authorsmanager.cpp  authorsmanager.h  authorsmanagerwidget.cpp  authorsmanagerwidget.h  authorsmanagerwidget.ui  authorsview.cpp  authorsview.h  authorsview.ui  bookeditor.cpp  bookeditor.h  bookeditorview.cpp  bookeditorview.h  bookeditorview.ui  bookexception.cpp  bookexception.h  bookexporter.cpp  bookexporter.h  bookexporterthread.cpp  (+427 more)
src/core/: abstarctview.h  abstractbookreader.cpp  abstractbookreader.h  arabicanalyzer.h  arabictokenizer.cpp  authorinfo.cpp  authorinfo.h  authorsmanager.cpp  bookexporter.cpp  bookexporter.h  bookindexerbase.h  booklistmanager.cpp  bookpage.cpp  bookpage.h  bookutils.cpp  bookutils.h  bookviewbase.cpp  bookviewbase.h  clheader.h  clucenequery.cpp  clutils.cpp  clutils.h  core.pri  core.pro  cssformatter.cpp  databasemanager.cpp  databasemanager.h  favouritesmanager.cpp  htmlhelper.cpp  htmlhelper.h  importmodel.h  indextaskiter.cpp  indextaskiter.h  indextracker.cpp  indextracker.h  librarybook.cpp  librarybookmanager.cpp  librarybookmanager.h  librarymanager.cpp  listmanager.cpp  (+26 more)
src/data/: qt_rc.qrc
src/data/css/: defaut.css
src/json/: json.cpp  json.h  json.pri
src/main/: aboutdialog.h  aboutdialog.ui  authorsmanagerwidget.h  authorsmanagerwidget.ui  authorsview.cpp  authorsview.h  authorsview.ui  bookeditorview.cpp  bookeditorview.ui  bookexporterthread.cpp  bookfilesreader.h  bookhistorydialog.cpp  bookhistorydialog.h  bookindexeditor.h  bookindexeditor.ui  bookindexer.cpp  bookindexerquran.h  bookindexersimple.h  bookindexerthread.cpp  bookindexerthread.h  bookinfodialog.cpp  booklistmanagerwidget.cpp  booklistmanagerwidget.h  bookmediaeditor.cpp  bookmediaeditor.h  bookmediaeditor.ui  bookreaderhelper.cpp  bookreaderview.cpp  bookreaderview.h  bookreferedialog.cpp  booksearchfilter.h  booksearchwidget.h  bookslistbrowser.cpp  bookwidget.cpp  bookwidget.h  bookwidgetmanager.cpp  bookwidgetmanager.h  checkablemessagebox.h  controlcenterdialog.ui  controlcenterwidget.h  (+87 more)
src/qtsingleapplication/: qtsingleapplication.cpp  qtsingleapplication.h
src/quazip/: qioapi.cpp  quazip.pri  quazip.pro  quazipnewinfo.cpp
src/ui/: ksetting.ui  mainwindow.ui  quransearch.ui
test/: test.pro  utilstest.cpp  utilstest.h
ui/: mainwindow.ui  quransearch.ui
